# AWS-Analytics_MSF

./: .gitignore  README.md
aws-local-python-datastream/: .env  (+3 more)
data_pipeline_local_original/: .env  README.md  prd.md  pyproject.toml
data_pipeline_local_original/docs/: architecture.md  cloud-flink-notes.md  dev-workflow.md  order-pipeline.md
data_pipeline_local_original/flink/: README.md  __init__.py
data_pipeline_local_original/flink/common/: __init__.py  config.py  iceberg_sink.py  job_base.py  kafka_source.py
data_pipeline_local_original/flink/jobs/: __init__.py
data_pipeline_local_original/flink/jobs/order_ingest/: README.md  config.yaml  job.py
data_pipeline_local_original/flink/tests/integration/: __init__.py  test_kafka_connectivity.py
data_pipeline_local_original/flink/tests/unit/: __init__.py  test_config.py  test_serialization.py
data_pipeline_local_original/infra/: docker-compose.yml
data_pipeline_local_original/infra/flink/: Dockerfile
data_pipeline_local_original/infra/kafka/: topics.yaml
data_pipeline_local_original/infra/scripts/: health-check.sh  setup.sh  start.sh  submit-order-ingest.sh
data_pipeline_local_original/producer/: README.md  __init__.py  cli.py
data_pipeline_local_original/producer/generators/: __init__.py  order_generator.py
data_pipeline_local_original/producer/kafka_client/: __init__.py  producer.py
data_pipeline_local_original/producer/schemas/: __init__.py  order_created_v1.py
data_pipeline_local_original/tests/: requirements.txt
data_pipeline_local_original/tests/e2e/: test_order_pipeline.py
(+284 files in other folders)
